--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -19,7 +19,7 @@ html,body {
 }
 .avatar img {
   padding: 5px;
-  background: #00d1b2;
+  background: #fff;
   border-radius: 50%;
   -webkit-box-shadow: 0 2px 3px rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.1);
   box-shadow: 0 2px 3px rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.1);
